--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,10 @@
 ---
 scale_graph : True #True or False
 model : "sentence_sim"
-storage : "/home/samuel/Bureau/text_df_graph.pkl"
-storage_exemples : "/home/samuel/Bureau/text_df_graph_exemples.csv"
+storage : "demo/text_processed.csv"
+storage_examples :  "demo/examples.csv"
 sentence_segmentation_method : "punct_commas" #spacy, punctuation, punct_commas
 
 paragraph_size : 5
-nb_exemples : 2 #number of exemples per modes to extract, multiply by 3 for the total number/text
+nb_examples : 2 #number of examples per modes to extract, multiply by 3 for the total number/text
 nb_texts : 0 #0 for all texts
