--- a/config.yaml
+++ b/config.yaml
@@ -8,3 +8,11 @@ sentence_segmentation_method : "punct_commas" #spacy, punctuation, punct_commas
 paragraph_size : 5
 nb_examples : 2 #number of examples per modes to extract, multiply by 3 for the total number/text
 nb_texts : 0 #0 for all texts
+
+report_config : 
+  use_config : True
+  sample : 0.5 # ratio of data shown in report
+  sort_by_score : False #True or False
+  sort_by_external_column : False #column name or False
+  mode_selection : ['normal'] #'all' or list of mode(s)
+  hidden_score : True #True or False
